# seL4-summit-2024-rust-training

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.devcontainer/root-task/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: push.yaml
.reuse/: dep5
.vscodex/: settings.json
.vscodex/dummy-project/: Cargo.toml
book/: .gitignore  Makefile  book.toml  shell.nix
book/preprocessor/: Cargo.toml  fragment-with-context.css  gh-links.css  rust-toolchain.toml
book/preprocessor/assets/: sel4-rust-training.css
book/preprocessor/src/: lib.rs  main.rs
book/preprocessors/: Cargo.toml
book/preprocessors/mdbook-fragment-with-context/: Cargo.toml
book/preprocessors/mdbook-fragment-with-context/src/: main.rs
book/preprocessors/mdbook-include-fragment-with-link/: Cargo.toml  foo.css
book/preprocessors/mdbook-include-fragment-with-link/src/: main.rs
book/src/: README.md  SUMMARY.md  introduction.md  placeholder.md  preprocessor-test.md  setup.md
book/src/microkit/: README.md  banscii.md  challenge.md  hello-world.md  ipc.md  shared-memory.md
book/src/root-task/: README.md  address-space.md  hello-world.md  kernel-objects.md  own-address-space.md  serial-device.md  spawn-task.md  spawn-thread.md  spawning-a-task.md  spawning-a-thread.md
book/src/setup/: README.md
cases/: .gitignore
cases/microkit/: Cargo.toml
cases/microkit/.cargo/: config.toml
cases/microkit/cases/banscii/: Makefile
cases/microkit/cases/hello/: Makefile
cases/root-task/: Cargo.toml
cases/root-task/cases/hello/: Makefile
cases/root-task/cases/serial-device/: Makefile
cases/root-task/cases/spawn-task/: Makefile
cases/root-task/cases/spawn-thread/: Makefile
code/: Makefile
code/docker/: Dockerfile  Makefile
docker/: Dockerfile  Makefile
examples/: .gitignore  Makefile  common.mk
examples/.cargo/: config.toml
examples/.devcontainer/microkit/: devcontainer.json
examples/.devcontainer/root-task/: devcontainer.json
examples/microkit/: Cargo.toml  common.mk
examples/microkit/banscii/: Makefile
examples/microkit/banscii/pds/assistant/: Cargo.toml
examples/microkit/banscii/pds/pl011-driver/: Cargo.toml
examples/microkit/banscii/pds/serial-driver/: Cargo.toml
examples/microkit/hello/: Makefile  test.py
examples/microkit/http-server/: Makefile  test.py
examples/microkit/http-server/helpers/virtio-hal-impl/: Cargo.toml
examples/microkit/http-server/pds/pl031-driver/: Cargo.toml
examples/microkit/http-server/pds/pl031-driver/core/: Cargo.toml
examples/microkit/http-server/pds/pl031-driver/interface-types/: Cargo.toml
examples/microkit/http-server/pds/server/: Cargo.toml
examples/microkit/http-server/pds/server/core/: Cargo.toml
examples/microkit/http-server/pds/sp804-driver/: Cargo.toml
examples/microkit/http-server/pds/virtio-blk-driver/: Cargo.toml
examples/microkit/http-server/pds/virtio-net-driver/: Cargo.toml
examples/root-task/: Cargo.toml  common.mk
examples/root-task/hello/: Cargo.toml  Makefile
examples/root-task/hello/src/: main.rs
examples/root-task/serial-device/: Makefile
examples/root-task/spawn-task/: Cargo.toml  Makefile
examples/root-task/spawn-thread/: Cargo.toml  Makefile
maintainers/: update.sh
maintainers/notes/: todo.txt
mk/: base.mk  microkit.mk  root-task.mk
support/targets/: README.md
testing/: harness.py
