#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]

resolver = "2"

members = [
    "examples/microkit/banscii/pds/artist",
    "examples/microkit/banscii/pds/assistant",
    "examples/microkit/banscii/pds/pl011-driver",
    "examples/microkit/hello/pds/hello",
    "examples/root-task/hello",
    "examples/root-task/serial-device",
    "examples/root-task/spawn-task",
    "examples/root-task/spawn-task/child",
    "examples/root-task/spawn-thread",
]
