#
# Copyright 2024, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "mdbook-gh-links"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
clap = "4.5"
mdbook = "0.4.36"
regex = "1.10"
semver = "1"
serde_json = "1"

[workspace]
