#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "banscii-pl011-driver"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-pl011-driver-core = { path = "core" }
banscii-pl011-driver-interface-types = { path = "interface-types" }
heapless = "0.7.16"
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", default-features = false }
sel4-microkit-message = { git = "https://github.com/seL4/rust-sel4" }
